# callcapture

./: .gitignore  README.md  run-dev.sh
.github/workflows/: release.yml
docs/: PENDING.md
docs/superpowers/plans/: 2026-05-23-voice-intelligence-phase1-foundation.md  2026-05-24-voice-intelligence-phase3b-fluidaudio-diarizer.md  2026-05-25-voice-intelligence-phase4a-sentiment.md  2026-05-25-voice-intelligence-phase4b-acoustic-emotion.md  (+4 more)
macos-app/: Package.resolved  Package.swift
macos-app/Scripts/: Info.plist  assemble-app.sh  build-app.sh  entitlements.plist  sign-app.sh
python-worker/: pyproject.toml
python-worker/app/: cli.py
python-worker/app/analyze/: diarization.py  emotion.py  insights.py  sentiment.py
python-worker/app/postprocess/: formatter.py  llm_client.py  llm_env.py  markdown.py
python-worker/app/schemas/: models.py
python-worker/app/transcribe/: engine.py  local_engine.py
python-worker/packaging/: call-capture-worker.spec  worker_entry.py
python-worker/tests/: test_analysis_schema.py  test_diarization_sidecar.py  test_emotion_compute.py  test_emotion_pure.py  test_emotion_schema.py  test_insights.py  test_insights_schema.py  test_llm_client.py  test_llm_env.py  test_llm_usage.py  test_local_engine_language.py  test_markdown_llm.py  test_notes_language_directive.py  test_pipeline_emotion.py  test_pipeline_insights.py  test_pipeline_sentiment.py  test_pipeline_stems.py  test_prepare_emotion.py  test_recording_type_schema.py  test_render_note.py  test_schemas.py  test_sentiment.py  test_sentiment_reconcile.py  test_sentiment_schema.py
(+43 files in other folders)
