[project]
name = "callcapture-worker"
version = "0.1.0"
description = "Python worker for macOS call recording app"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pywhispercpp",
    "anthropic",
    "openai",
    "click",
    "numpy",
    "audonnx",
    "audeer",
    "audiofile",
    "onnxruntime",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
packaging = [
    "pyinstaller>=6.6",
]

[project.scripts]
callcapture = "app.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.setuptools.packages.find]
include = ["app*"]
